# delegate

./: CMakeLists.txt  LICENSE  Makefile  main.cpp
include/: Delegate.hpp  Method.hpp  Object.hpp
src/: Delegate.cpp  Object.cpp
